--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "3.0.2",
